# workmate_practice

./: README.md  pyproject.toml
asyncio_practice/prac_2/: .gitignore  README.md  database.py  main.py  pyproject.toml
db/: prac_1.py
db/prac_2/: .gitignore  database.py  exceptions.py  main.py  pyproject.toml  spimex_trading_results.db
django_practice/: .env.example  Dockerfile  compose.yaml  manage.py  pyproject.toml  requirements.txt
django_practice/src/video_proj/: asgi.py  settings.py  urls.py  wsgi.py
django_practice/src/videoapp/: admin.py  apps.py  models.py
django_practice/src/videoapp/api/v1/: serializers.py  views.py
django_practice/src/videoapp/management/commands/: generate_test_data.py
django_practice/src/videoapp/migrations/: 0001_initial.py
fastapi_practice/: .env.example  .gitignore  .pre-commit-config.yaml  .test.env  dump.rdb  pyproject.toml
fastapi_practice/src/: config.py  database.py  main.py
fastapi_practice/src/crud/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
fastapi_practice/tests/: conftest.py
fastapi_practice/tests/crud/: test_router.py  test_service.py
final_project/: consumer.py  producer.py  pyproject.toml
python/src/design/: messages.py
python/src/refactor/: links.py
src/descriptors/: models.py
src/descriptors/tests/: test_models.py
src/design/: orders.py
src/iterators/: utils.py
src/refactor/: links.py
src/wallets/: currency.py  money.py
