[project]
name = "fastapi-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
pythonpath="/home/user/code/wm_practice/workmate_practice/fastapi_practice"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "fastapi-pagination>=0.15.15",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "ruff>=0.15.20",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]
