[project]
name = "prac-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "aiohttp-retry>=2.9.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "xlrd>=2.0.2",
]
