[project]
name = "prac-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "pdfplumber>=0.11.9",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.49",
]
